[package]
name = "runner"
version = "0.1.0"
authors = ["Kamil Ciemniewski <kamil@ciemniew.ski>"]
edition = "2018"

[dependencies]
tonic = { version = "0.4.0", features = ["tls"] }
prost = "0.7.0"

[build-dependencies]
tonic-build = "0.4.0"

[[bin]]
    name = "server"
    path = "src/server.rs"

[[bin]]
    name = "client"
    path = "src/client.rs"
